<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/addStoryMenu"
        android:icon="@drawable/ic_add"
        app:showAsAction="ifRoom"
        android:title="@string/add" />

    <item
        android:id="@+id/settingMenu"
        android:icon="@drawable/ic_menu"
        android:title="@string/setting"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/mapsMenu"
                android:title="@string/maps"
                android:icon="@drawable/ic_map"
                app:showAsAction="withText"/>

            <item
                android:id="@+id/logoutMenu"
                android:title="@string/logout"
                android:icon="@drawable/ic_logout"
                app:showAsAction="withText"/>
        </menu>
    </item>

</menu>