<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AddStoryActivity">

    <ImageView
        android:id="@+id/iv_preview_image"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@id/btn_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_preview"/>

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:text="@string/camera"
        app:layout_constraintStart_toStartOf="@id/iv_preview_image"
        app:layout_constraintTop_toBottomOf="@id/iv_preview_image" />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:text="@string/gallery"
        app:layout_constraintEnd_toEndOf="@id/iv_preview_image"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn_camera"
        app:layout_constraintTop_toTopOf="@+id/btn_camera" />

    <EditText
        android:id="@+id/ed_add_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textShortMessage"
        app:layout_constraintBottom_toTopOf="@+id/btn_add"
        app:layout_constraintEnd_toEndOf="@+id/iv_preview_image"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/iv_preview_image"
        app:layout_constraintTop_toBottomOf="@+id/btn_camera"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="150dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>